Criação de novos repositórios, ajustes nas configurações do Entity Framework e injção de dependência.

--- a/GameArchive/appsettings.json
+++ b/GameArchive/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=GREG-PC\\SQLEXPRESS;Database=Game_Archive_DB;User Id=sa;Password=gregdev2018"
+  },
   "AllowedHosts": "*"
 }
