--- a/GameArchive/appsettings.json
+++ b/GameArchive/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DataBase": "Server=GREG-PC\\SQLEXPRESS;Database=Game_Archive_DB;User Id=sa;Password=gregdev2018"
+    "DataBase": "Server=GREG-PC\\SQLEXPRESS;Integrated Security=SSPI;TrustServerCertificate=True;Database=Game_Archive_DB;User Id=sa;Password=gregdev2018"
   },
   "AllowedHosts": "*"
 }
